/* Verb */ Non-personal forms. <cantare#47627>

--- a/wiki/cantare.wikitext
+++ b/wiki/cantare.wikitext
@@ -12,6 +12,45 @@ Latin, [[frequentative]] of ''[[canere]]''.
 ('''[[canto|cant&#333;]]''', '''cant&#257;re''', '''cant&#257;v&#299;''', '''cant&#257;tus''')
 # [[sing]]
 
+====Participles====
+{| cellpadding="5" border="1"
+!style="background:#F1BC4E;"| ''Tense \ Voice''
+!style="background:#D0D0B0;"| ''Active''
+!style="background:#D0D0B0;"| ''Passive''
+|-
+!style="background:#D0D0B0;"| ''Present''
+|style="background:#F7F7F5;" width=125px| <big> cant&#257;ns
+|style="background:#F7F7F5;" align="center" width=125px| &mdash;&mdash;
+|-
+!style="background:#D0D0B0;"| ''Perfect''
+|style="background:#F7F7F5;" align="center"| &mdash;&mdash;
+|style="background:#F7F7F5;"| <big> cant&#257;tus
+|-
+!style="background:#D0D0B0;"| ''Future''
+|style="background:#F7F7F5;"| <big> cant&#257;t&#363;rus
+|style="background:#F7F7F5;"| <big> cantandus
+|}
+
+====Infinitives====
+{| cellpadding="5" border="1"
+!style="background:#F1BC4E;"| ''Tense \ Voice''
+!style="background:#D0D0B0;"| ''Active''
+!style="background:#D0D0B0;"| ''Passive''
+|-
+!style="background:#D0D0B0;"| ''Present''
+|style="background:#F7F7F5;" width=125px| <big> cant&#257;re
+|style="background:#F7F7F5;" width=125px| <big> cant&#257;r&#299;
+|-
+!style="background:#D0D0B0;"| ''Perfect''
+|style="background:#F7F7F5;"| <big> cant&#257;visse
+|style="background:#F7F7F5;"| <big> cant&#257;tus esse
+|-
+!style="background:#D0D0B0;"| ''Future''
+|style="background:#F7F7F5;"| <big> cant&#257;t&#363;rus esse
+|style="background:#F7F7F5;"| <big> cant&#257;tum &#299;r&#299;
+|}
+
+
 ====Conjugation====
 First conjugation (1).
 {| border="1" cellpadding="2"
