--- a/wiki/vacuum_cleaner.wikitext
+++ b/wiki/vacuum_cleaner.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 '''vacuum cleaner''' (''plural'' '''vacuum cleaners''')
 
-#A domestic and industrial mobile machine for cleaning floors and similar surfaces, that draws dust, etc, into a container (often a bag) by the suction created by an electric motor driving a fan.
+#A domestic or industrial mobile machine for cleaning floors and similar surfaces, that draws dust, etc., into a container (often a bag) by the suction created by an electric motor driving a fan.
 
 ====Synonyms====
 *[[hoover]], [[vacuum]]
