--- a/wiki/Belorussian.wikitext
+++ b/wiki/Belorussian.wikitext
@@ -23,7 +23,7 @@
 :*{{fo}}: [[Belarussiskt]]
 :*{{fa}}: [[بلروسى]] ,[[براروسی]]
 :*{{fi}}: [[valkovenäjä]]
-:*{{fr}}: [[Biélorusse]]
+:*{{fr}}: [[biélorusse]] ''m''
 :*{{gl}}: [[Bielorruso]]
 :*{{ka}}: [[ბელორუსიული]]
 :*{{de}}: [[Weißrussisch]]
@@ -34,7 +34,7 @@
 :*{{is}}: [[Hvít-rússneska]]
 :*{{id}}: [[Belorusia]], [[Belo Rusia]]
 :*{{ga}}: [[Bealarúisis]]
-:*{{it}}: [[Bielorusso]]
+:*{{it}}: [[bielorusso]]
 :*{{ja}}: [[ベラルーシ語]]
 |}
 | width=1% |
@@ -58,7 +58,7 @@
 :*{{sr}}: [[Белоруски]]
 :*{{sk}}: [[bieloruština]] {{f}}
 :*{{sl}}: [[Beloruščina]]
-:*{{es}}: [[Bielorruso]]
+:*{{es}}: [[bielorruso]]
 :*{{sw}}: [[Kibelorusia]]
 :*{{sv}}: [[vitryska]]
 :*{{ta}}: [[பைலோருஸ்சியன்]]
