--- a/wiki/%D1%83%D0%BA%D1%80%D0%BE%D0%BF.wikitext
+++ b/wiki/%D1%83%D0%BA%D1%80%D0%BE%D0%BF.wikitext
@@ -1,7 +1,6 @@
 ==Russian==
-
 ===Noun===
-[[:ru:укроп|укроп]] (ukrop) - [[dill]]
+'''укроп''' (ukrop)
 
-==[[multilingual associations]]==
-[[crop]] '''укроп'''а - (of dill)
+# [[dill]]
+[[ru:укроп]]
