--- a/wiki/cantare.wikitext
+++ b/wiki/cantare.wikitext
@@ -7,6 +7,18 @@ Latin, [[frequentative]] of ''[[canere]]''.
 
 # [[sing]]
 
+===Related terms===
+*[[cantabile]]
+*[[cantante]]
+*[[cantata]]
+*[[cantatore]]
+*[[canterino]]
+*[[cantilena]]
+*[[canto]]
+*[[canzone]]
+
+----
+
 ==Latin==
 ===Verb===
 ('''[[canto|cant&#333;]]''', '''cant&#257;re''', '''cant&#257;v&#299;''', '''cant&#257;tus''')
@@ -243,7 +255,7 @@ First conjugation (1).
 <font color="red"> 1 </font> = cant&#257;tus / cant&#257;ta / cant&#257;tum <br>
 <font color="red"> 2 </font> = cant&#257;t&#299; / cant&#257;tae / cant&#257;ta  <br>
 
-==Related Terms==
+===Related Terms===
 *[[cantar]]
 *[[cantata]]
 *[[cantio]]
