--- a/wiki/Bengali.wikitext
+++ b/wiki/Bengali.wikitext
@@ -12,8 +12,8 @@
 *{{zh}}: [[孟加拉语]]
 *{{et}}: [[bengali keel]]
 *{{fi}}: bengali
-*{{fr}}: bengali
-*{{hi}}: [[बंगाली]]
+*{{fr}}: bengali ''m''
+*{{hi}}: [[बंगाली]] ''f''
 *{{ja}}: [[ベンガル語]] (bengaru-go)
 *{{ne}}: [[बंगाली]]
 *{{pt}}: Bengali
