--- a/wiki/canto.wikitext
+++ b/wiki/canto.wikitext
@@ -1,7 +1,34 @@
 ==English==
-
 ===Noun===
-
 '''canto'''
 
 #One of the chief divisions of a long poem; a book.
+
+----
+
+==Italian==
+===Noun===
+'''canto''' ''m''
+
+# [[song]]
+
+====Etymology====
+Latin ''[[cantus]]''
+
+====Related terms===
+*[[cantopiano]]
+*[[cantare]]
+*[[cantore]]
+*[[cantoria]]
+*[[canzone]]
+
+===Noun===
+'''canto''' ''m''
+
+# [[corner]]
+
+====Related terms====
+*[[cantonale]]
+*[[cantone]]
+*[[cantoniera]]
+*[[cantuccio]]
