{{fr}}: [[bosniaque]] ''m'' <Bosnian#48633>

--- a/wiki/Bosnian.wikitext
+++ b/wiki/Bosnian.wikitext
@@ -15,7 +15,7 @@
 #<br>
 #:*[[Bosnian]]: [[bosanski]]
 #:*{{chr}}: [[ᏉᏌᏂ]]
-#:*{{fr}}: [[Bosniaque]]
+#:*{{fr}}: [[bosniaque]] ''m''
 #:*{{nl}}: [[Bosnisch]]
 
 ===Related Terms===
