--- a/wiki/canto.wikitext
+++ b/wiki/canto.wikitext
@@ -15,7 +15,7 @@
 ====Etymology====
 Latin ''[[cantus]]''
 
-====Related terms===
+====Related terms====
 *[[cantopiano]]
 *[[cantare]]
 *[[cantore]]
