Verb trans. +Latin <praise#38588>

--- a/wiki/praise.wikitext
+++ b/wiki/praise.wikitext
@@ -16,7 +16,7 @@
 *Dutch: eerbetoon
 *Finnish: ylistys (1, 2)
 *French: louange
-*Latin: laudo (to praise)
+*Latin: [[laus]] ''f''
 
 ====Related terms====
 *[[sing the praises]]
@@ -32,3 +32,4 @@
 *Dutch: [[prijzen]], [[eren]]
 *Finnish: [[ylistää]]
 *French: [[louer]]
+*Latin: [[laudare]]
