--- a/wiki/quaerere.wikitext
+++ b/wiki/quaerere.wikitext
@@ -236,3 +236,9 @@ Third conjugation (3).
 |}
 <font color="red"> 1 </font> = quaes&#299;tus / quaes&#299;ta / quaes&#299;tum <br>
 <font color="red"> 2 </font> = quaes&#299;t&#299; / quaes&#299;tae / quaes&#299;ta  <br>
+
+===Related terms===
+*[[query]]
+*[[quest]]
+*[[question]]
+*[[questione]]
