--- a/wiki/Burmese.wikitext
+++ b/wiki/Burmese.wikitext
@@ -7,7 +7,7 @@
 
 ====Translations====
 *[[Chinese]]: [[缅甸人]](1),[[缅甸语]](2)
-*French: [[Birman]], [[du Myanmar]]
+*French: [[Birman]] ''m'' (1), [[Birmane]] ''f'' (1), [[birman]] ''m'' (2)
 *German: [[Myanmare]] ''m'', [[Birmane]] ''m'', [[Myanmarin]] ''f'', [[Birmanin]] ''f''
 *Myanmar: [[ရန္မာ]]
 *Spanish: [[birmano]]
@@ -19,6 +19,6 @@
 
 ====Translations====
 *[[Chinese]]: [[缅甸的]],[[缅甸人的]],[[缅甸语的]]
-*French: [[birman]], [[du Myanmar]]
+*French: [[birman]] ''m'', [[birmane]] ''f''
 *German: [[myanmarisch]], [[birmanisch]]
 *Spanish: [[birmano]]
