moved etym; decapitalised "hydrogen"; +note on part of speech & plural <pH#66123>

--- a/wiki/pH.wikitext
+++ b/wiki/pH.wikitext
@@ -1,17 +1,16 @@
 ==Translingual==
+====Etymology====
+From ''p'', denoting negative logarithm, and ''H'', denoting hydrogen.
 
 ===Abbreviation===
-'''pH'''
+'''pH''' (''functioning as a noun''; ''plural'' '''pHs''')
 
-# The negative of the base 10 [[logarithm]] of the concentration of [[hydrogen]] ions, measured in [[mole]]s per liter. A measure of acidity or alkalinity which takes numerical values from 0 (maximum acidity) through 7 (neutral) to 14 (maximum alkalinity).
+#The negative of the [[logarithm]] to the base 10 of the concentration of [[hydrogen]] ions, measured in [[mole]]s per liter; a measure of acidity or alkalinity of a substance, which takes numerical values from 0 (maximum acidity) through 7 (neutral) to 14 (maximum alkalinity).
 
 ====See also====
 *[[pOH]], [[pK]]
 
-====Etymology====
-From ''p'', denoting negative logarithm, and ''H'', denoting Hydrogen.
-
 ===Abbreviation===
 '''PH'''
 
-# The [[Philippines]].
+#The [[Philippines]].
