--- a/wiki/praise.wikitext
+++ b/wiki/praise.wikitext
@@ -1,10 +1,12 @@
 ==English==
-
 ===Pronunciation===
 *prāz, /preɪz/, /preIz/
 
 ====Homophones====
 *[[prays]], [[preys]]
+
+===Etymology===
+Latin ''[[pretium]]''
 
 ===Noun===
 '''praise''' (plural: [[praises]])
@@ -13,14 +15,15 @@
 #[[worship]]
 
 ====Translations====
-*Dutch: eerbetoon
-*Finnish: ylistys (1, 2)
-*French: louange
+*Chinese: [[颂扬]], [[赞美]]
+*Dutch: [[eerbetoon]]
+*Finnish: [[ylistys]] (1, 2)
+*French: [[louange]]
+*Japanese: [[賞賛]]
 *Latin: [[laus]] ''f''
 
 ====Related terms====
 *[[sing the praises]]
-
 
 ===Verb===
 '''to praise''' ([[praises]], praised)
@@ -29,7 +32,12 @@
 
 ====Translations====
 *CJK Characters: [[讚]], [[讃]]
+*Chinese: [[赞扬]]
 *Dutch: [[prijzen]], [[eren]]
 *Finnish: [[ylistää]]
 *French: [[louer]]
+*Japanese: [[褒める]] ([[ほめる]])
 *Latin: [[laudare]]
+
+===Related terms===
+*[[praiseworthy]]
