--- a/wiki/AKA.wikitext
+++ b/wiki/AKA.wikitext
@@ -1,12 +1,1 @@
-==English==
-===Abbreviation===
-'''aka'''
-
-#[[also known as]]
-
-===Translations===
-*Dutch: [[alias]]
-*Finnish: [[alias]]
-*French: [[alias]]
-*Hungarian: [[másképpen]], [[más néven]]
-*Spanish: [[alias]]
+#REDIRECT [[a.k.a.]]
