--- a/wiki/praise.wikitext
+++ b/wiki/praise.wikitext
@@ -18,7 +18,8 @@ Latin ''[[pretium]]''
 *Chinese: [[颂扬]], [[赞美]]
 *Dutch: [[eerbetoon]]
 *Finnish: [[ylistys]] (1, 2)
-*French: [[louange]]
+*French: [[louange]] ''f''
+*Italian: [[lode]] ''f'', [[éloge]] ''m'', [[compliment]] ''m''
 *Japanese: [[賞賛]]
 *Latin: [[laus]] ''f''
 
@@ -35,7 +36,8 @@ Latin ''[[pretium]]''
 *Chinese: [[赞扬]]
 *Dutch: [[prijzen]], [[eren]]
 *Finnish: [[ylistää]]
-*French: [[louer]]
+*French: [[louer]], [[féliciter]]
+*Italian: [[lodare]]
 *Japanese: [[褒める]] ([[ほめる]])
 *Latin: [[laudare]]
 
