--- a/wiki/amare.wikitext
+++ b/wiki/amare.wikitext
@@ -6,14 +6,205 @@
 
 ----
 ==Latin==
+===Pronunciation===
+*[[AHD]]: <big> &#259;-m&#259;&prime; &#259;-r&#277; </big>
 
 ===Verb===
-'''amare'''; infinitive, first conjugation
+('''am&#333;''', '''am&#257;re''', '''am&#257;v&#299;''', '''am&#257;tum''')
+# To [[love]].
 
-# [[love]]
+====Conjugation====
+First conjugation (1).
+{| border="1" cellpadding="2"
+!style="background:#F1BC4E;" colspan=3| <small>''Number''
+!style="background:#F1BC4E;" colspan=3| <small>''Singular''
+!style="background:#F1BC4E;" colspan=3| <small>''Plural''
+|-
+!style="background:#F1BC4E;" colspan=3| <small>''Tense \ Person''
+!style="background:#F1BC4E;"| <small>''1.''
+!style="background:#F1BC4E;"| <small>''2.''
+!style="background:#F1BC4E;"| <small>''3.''
+!style="background:#F1BC4E;"| <small>''11.''
+!style="background:#F1BC4E;"| <small>''22.''
+!style="background:#F1BC4E;"| <small>''33.''
+|-
+!style="background:#54E9FA;" rowspan=12|<small>I<br>n<br>d<br>i<br>c<br>a<br>t<br>i<br>v<br>e
+!style="background:#54E9FA;" rowspan=6|<small>A<br>c<br>t<br>i<br>v<br>e
+!style="background:#54E9FA;"|<small>''Present''
+|style="background:#FBFCE4;"|am&#333;
+|style="background:#FBFCE4;"|am&#257;s
+|style="background:#FBFCE4;"|amat
+|style="background:#FBFCE4;"|am&#257;mus
+|style="background:#FBFCE4;"|am&#257;tis
+|style="background:#FBFCE4;"|amant
+|-
+!style="background:#54E9FA;"| <small>''Future''
+|style="background:#FBFCE4;"|am&#257;b&#333;
+|style="background:#FBFCE4;"|am&#257;bis
+|style="background:#FBFCE4;"|am&#257;bit
+|style="background:#FBFCE4;"|am&#257;bimus
+|style="background:#FBFCE4;"|am&#257;bitis
+|style="background:#FBFCE4;"|am&#257;bunt
+|-
+!style="background:#54E9FA;"| <small>''Imperfect''
+|style="background:#FBFCE4;"|am&#257;bam
+|style="background:#FBFCE4;"|am&#257;b&#257;s
+|style="background:#FBFCE4;"|am&#257;bat
+|style="background:#FBFCE4;"|am&#257;b&#257;mus
+|style="background:#FBFCE4;"|am&#257;b&#257;tis
+|style="background:#FBFCE4;"|am&#257;bant
+|-
+!style="background:#54E9FA;"| <small>''Perfect''
+|style="background:#FBFCE4;"|am&#257;v&#299;
+|style="background:#FBFCE4;"|am&#257;vist&#299;
+|style="background:#FBFCE4;"|am&#257;vit
+|style="background:#FBFCE4;"|am&#257;vimus
+|style="background:#FBFCE4;"|am&#257;vistis
+|style="background:#FBFCE4;"|am&#257;v&#275;runt
+|-
+!style="background:#54E9FA;"| <small>''Future Perfect''
+|style="background:#FBFCE4;"|am&#257;ver&#333;
+|style="background:#FBFCE4;"|am&#257;veris
+|style="background:#FBFCE4;"|am&#257;verit
+|style="background:#FBFCE4;"|am&#257;verimus
+|style="background:#FBFCE4;"|am&#257;veritis
+|style="background:#FBFCE4;"|am&#257;verint
+|-
+!style="background:#54E9FA;"| <small>''Pluperfect''
+|style="background:#FBFCE4;"|am&#257;veram
+|style="background:#FBFCE4;"|am&#257;ver&#257;s
+|style="background:#FBFCE4;"|am&#257;verat
+|style="background:#FBFCE4;"|am&#257;ver&#257;mus
+|style="background:#FBFCE4;"|am&#257;ver&#257;tis
+|style="background:#FBFCE4;"|am&#257;verant
+|-
+!style="background:#54E9FA;" rowspan=6| <small>P<br>a<br>s<br>s<br>i<br>v<br>e
+!style="background:#54E9FA;"|<small>''Present''
+|style="background:#FBFCE4;"|amor
+|style="background:#FBFCE4;"|am&#257;ris
+|style="background:#FBFCE4;"|am&#257;tur
+|style="background:#FBFCE4;"|am&#257;mur
+|style="background:#FBFCE4;"|am&#257;min&#299;
+|style="background:#FBFCE4;"|amantur
+|-
+!style="background:#54E9FA;"|<small>''Future''
+|style="background:#FBFCE4;"|am&#257;bor
+|style="background:#FBFCE4;"|am&#257;beris
+|style="background:#FBFCE4;"|am&#257;bitur
+|style="background:#FBFCE4;"|am&#257;bimur
+|style="background:#FBFCE4;"|am&#257;bimin&#299;
+|style="background:#FBFCE4;"|am&#257;buntur
+|-
+!style="background:#54E9FA;"|<small>''Imperfect''
+|style="background:#FBFCE4;"|am&#257;bar
+|style="background:#FBFCE4;"|am&#257;b&#257;ris
+|style="background:#FBFCE4;"|am&#257;b&#257;tur
+|style="background:#FBFCE4;"|am&#257;b&#257;mur
+|style="background:#FBFCE4;"|am&#257;b&#257;min&#299;
+|style="background:#FBFCE4;"|am&#257;bantur
+|-
+!style="background:#54E9FA;"|<small>''Perfect''
+|style="background:#FBFCE4;"|am&#257;tus<font color="red"><sup>1</sup></font><br>sum
+|style="background:#FBFCE4;"|am&#257;tus<font color="red"><sup>1</sup></font><br>es
+|style="background:#FBFCE4;"|am&#257;tus<font color="red"><sup>1</sup></font><br>est
+|style="background:#FBFCE4;"|am&#257;t&#299; <font color="red"><sup>2</sup></font><br>sumus
+|style="background:#FBFCE4;"|am&#257;t&#299; <font color="red"><sup>2</sup></font><br>estis
+|style="background:#FBFCE4;"|am&#257;t&#299; <font color="red"><sup>2</sup></font><br>sunt
+|-
+!style="background:#54E9FA;"|<small>''Future Perfect''
+|style="background:#FBFCE4;"|am&#257;tus<font color="red"><sup>1</sup></font><br>er&#333;
+|style="background:#FBFCE4;"|am&#257;tus<font color="red"><sup>1</sup></font><br>eris
+|style="background:#FBFCE4;"|am&#257;tus<font color="red"><sup>1</sup></font><br>erit
+|style="background:#FBFCE4;"|am&#257;t&#299; <font color="red"><sup>2</sup></font><br>erimus
+|style="background:#FBFCE4;"|am&#257;t&#299; <font color="red"><sup>2</sup></font><br>eritis
+|style="background:#FBFCE4;"|am&#257;t&#299; <font color="red"><sup>2</sup></font><br>erunt
+|-
+!style="background:#54E9FA;"|<small>''Pluperfect''
+|style="background:#FBFCE4;"|am&#257;tus<font color="red"><sup>1</sup></font><br>eram
+|style="background:#FBFCE4;"|am&#257;tus<font color="red"><sup>1</sup></font><br>er&#257;s
+|style="background:#FBFCE4;"|am&#257;tus<font color="red"><sup>1</sup></font><br>erat
+|style="background:#FBFCE4;"|am&#257;t&#299; <font color="red"><sup>2</sup></font><br>er&#257;mus
+|style="background:#FBFCE4;"|am&#257;t&#299; <font color="red"><sup>2</sup></font><br>er&#257;tis
+|style="background:#FBFCE4;"|am&#257;t&#299; <font color="red"><sup>2</sup></font><br>erant
+|-
+!style="background:#92B887;" rowspan=8|<small>S<br>u<br>b<br>j<br>u<br>n<br>c<br>t<br>i<br>v<br>e
+!style="background:#92B887;" rowspan=4|<small>A<br>c<br>t<br>i<br>v<br>e
+!style="background:#92B887;"|<small>''Present''
+|style="background:#E7FEE9;"| amem
+|style="background:#E7FEE9;"| am&#275;s
+|style="background:#E7FEE9;"| amet
+|style="background:#E7FEE9;"| am&#275;mus
+|style="background:#E7FEE9;"| am&#275;tis
+|style="background:#E7FEE9;"| ament
+|-
+!style="background:#92B887;"|<small>''Imperfect''
+|style="background:#E7FEE9;"| am&#257;rem
+|style="background:#E7FEE9;"| am&#257;r&#275;s
+|style="background:#E7FEE9;"| am&#257;ret
+|style="background:#E7FEE9;"| am&#257;r&#275;mus
+|style="background:#E7FEE9;"| am&#257;r&#275;tis
+|style="background:#E7FEE9;"| am&#257;rent
+|-
+!style="background:#92B887;"|<small>''Perfect''
+|style="background:#E7FEE9;"| am&#257;verim
+|style="background:#E7FEE9;"| am&#257;ver&#299;s
+|style="background:#E7FEE9;"| am&#257;verit
+|style="background:#E7FEE9;"| am&#257;ver&#299;mus
+|style="background:#E7FEE9;"| am&#257;ver&#299;tis
+|style="background:#E7FEE9;"| am&#257;verint
+|-
+!style="background:#92B887;"|<small>''Pluerfect''
+|style="background:#E7FEE9;"| am&#257;vissem
+|style="background:#E7FEE9;"| am&#257;viss&#275;s
+|style="background:#E7FEE9;"| am&#257;visset
+|style="background:#E7FEE9;"| am&#257;viss&#275;mus
+|style="background:#E7FEE9;"| am&#257;viss&#275;tis
+|style="background:#E7FEE9;"| am&#257;vissent
+|-
+!style="background:#92B887;" rowspan=4|<small>P<br>a<br>s<br>s<br>i<br>v<br>e
+!style="background:#92B887;"|<small>''Present''
+|style="background:#E7FEE9;"| amer
+|style="background:#E7FEE9;"| am&#275;ris
+|style="background:#E7FEE9;"| am&#275;tur
+|style="background:#E7FEE9;"| am&#275;mur
+|style="background:#E7FEE9;"| am&#275;min&#299;
+|style="background:#E7FEE9;"| amentur
+|-
+!style="background:#92B887;"|<small>''Imperfect''
+|style="background:#E7FEE9;"| am&#257;rer
+|style="background:#E7FEE9;"| am&#257;r&#275;ris
+|style="background:#E7FEE9;"| am&#257;r&#275;tur
+|style="background:#E7FEE9;"| am&#257;r&#275;mur
+|style="background:#E7FEE9;"| am&#257;r&#275;min&#299;
+|style="background:#E7FEE9;"| am&#257;rentur
+|-
+!style="background:#92B887;"|<small>''Perfect''
+|style="background:#E7FEE9;"|am&#257;tus<font color="red"><sup>1</sup></font><br>sim
+|style="background:#E7FEE9;"|am&#257;tus<font color="red"><sup>1</sup></font><br>s&#299;s
+|style="background:#E7FEE9;"|am&#257;tus<font color="red"><sup>1</sup></font><br>sit
+|style="background:#E7FEE9;"|am&#257;t&#299; <font color="red"><sup>2</sup></font><br>s&#299;mus
+|style="background:#E7FEE9;"|am&#257;t&#299; <font color="red"><sup>2</sup></font><br>s&#299;tis
+|style="background:#E7FEE9;"|am&#257;t&#299; <font color="red"><sup>2</sup></font><br>sint
+|-
+!style="background:#92B887;"|<small>''Pluperfect''
+|style="background:#E7FEE9;"|am&#257;tus<font color="red"><sup>1</sup></font><br>essem
+|style="background:#E7FEE9;"|am&#257;tus<font color="red"><sup>1</sup></font><br>ess&#275;s
+|style="background:#E7FEE9;"|am&#257;tus<font color="red"><sup>1</sup></font><br>esset
+|style="background:#E7FEE9;"|am&#257;t&#299; <font color="red"><sup>2</sup></font><br>ess&#275;mus
+|style="background:#E7FEE9;"|am&#257;t&#299; <font color="red"><sup>2</sup></font><br>ess&#275;tis
+|style="background:#E7FEE9;"|am&#257;t&#299; <font color="red"><sup>2</sup></font><br>essent
+|-
+!style="background:#BD91BD;" colspan=3| <small>Imperative
+|style="background:#FCF2E9;" align="center"|&mdash;&mdash;
+|style="background:#FCF2E9;"| am&#257;
+|style="background:#FCF2E9;" align="center"|&mdash;&mdash;
+|style="background:#FCF2E9;" align="center"|&mdash;&mdash;
+|style="background:#FCF2E9;"| am&#257;te
+|style="background:#FCF2E9;" align="center"|&mdash;&mdash;
+|}
+<font color="red"> 1 </font> = am&#257;tus / am&#257;ta / am&#257;tum  <br>
+<font color="red"> 2 </font> = am&#257;t&#299; / am&#257;tae / am&#257;ta   <br>
 
-====Principle Parts====
-[[amo]], amare, [[amavi]], [[amatus]]
 
 ===Related Terms===
 
