--- a/wiki/amare.wikitext
+++ b/wiki/amare.wikitext
@@ -13,6 +13,44 @@
 ('''am&#333;''', '''am&#257;re''', '''am&#257;v&#299;''', '''am&#257;tum''')
 # To [[love]].
 
+====Participles====
+{| cellpadding="5" border="1"
+!style="background:#F1BC4E;"| ''Tense \ Voice''
+!style="background:#D0D0B0;"| ''Active''
+!style="background:#D0D0B0;"| ''Passive''
+|-
+!style="background:#D0D0B0;"| ''Present''
+|style="background:#F7F7F5;" width=125px| <big> am&#257;ns
+|style="background:#F7F7F5;" align="center" width=125px| &mdash;&mdash;
+|-
+!style="background:#D0D0B0;"| ''Perfect''
+|style="background:#F7F7F5;" align="center"| &mdash;&mdash;
+|style="background:#F7F7F5;"| <big> am&#257;tus
+|-
+!style="background:#D0D0B0;"| ''Future''
+|style="background:#F7F7F5;"| <big> am&#257;t&#363;rus
+|style="background:#F7F7F5;"| <big> amandus
+|}
+
+====Infinitives====
+{| cellpadding="5" border="1"
+!style="background:#F1BC4E;"| ''Tense \ Voice''
+!style="background:#D0D0B0;"| ''Active''
+!style="background:#D0D0B0;"| ''Passive''
+|-
+!style="background:#D0D0B0;"| ''Present''
+|style="background:#F7F7F5;" width=125px| <big> am&#257;re
+|style="background:#F7F7F5;" width=125px| <big> am&#257;r&#299;
+|-
+!style="background:#D0D0B0;"| ''Perfect''
+|style="background:#F7F7F5;"| <big> am&#257;visse
+|style="background:#F7F7F5;"| <big> am&#257;tus esse
+|-
+!style="background:#D0D0B0;"| ''Future''
+|style="background:#F7F7F5;"| <big> am&#257;t&#363;rus esse
+|style="background:#F7F7F5;"| <big> am&#257;tum &#299;r&#299;
+|}
+
 ====Conjugation====
 First conjugation (1).
 {| border="1" cellpadding="2"
@@ -204,7 +242,6 @@ First conjugation (1).
 |}
 <font color="red"> 1 </font> = am&#257;tus / am&#257;ta / am&#257;tum  <br>
 <font color="red"> 2 </font> = am&#257;t&#299; / am&#257;tae / am&#257;ta   <br>
-
 
 ===Related Terms===
 
