--- a/wiki/amiga.wikitext
+++ b/wiki/amiga.wikitext
@@ -1,26 +1,15 @@
 ==Portuguese==
-=== noun, ''f'' ===
+===Noun===
+'''amiga''' ''f''
 
-===Translations===
-*English: [[friend]]
-*[[Esperanto]]: [[amikino]]
-*French: [[amie]] ''f''
-*German: [[Freundin]] ''f''
-*[[Interlingua]]: [[amica]]
-*Latin: [[amica]] -ae
-*[[Romanica]]: [[amica]] ''f''
+# [[friend]]
+
 ----
 
 ==Spanish==
-=== noun, ''f'' ===
+===Noun===
+'''amiga''' ''f''
 
-===Translations===
-*English: [[friend]], [[girlfriend]]
-*[[Esperanto]]: [[amikino]]
-*French: [[amie]] ''f''
-*German: [[Freundin]] ''f''
-*[[Interlingua]]: [[amica]]
-*Latin: [[amica]] -ae
-*[[Romanica]]: [[amica]] ''f''
+# [[friend]]
 
 [[Category:Portuguese nouns]]
