--- a/wiki/amicus.wikitext
+++ b/wiki/amicus.wikitext
@@ -8,11 +8,13 @@ From Latin ''[[amare]]'', '''love''' + ''-ic'' adjective ending, used as [[subst
 
 Feminine is ''[[amica]]''.
 
+Antonym: [[inimicus]].
+
 ===Related Terms===
 
 *[[amicable]]
 *[[amigo]]
-*[[amicus curae]]
+*[[amicus curiae]]
 *[[amiable]]
 *[[amity]]
 
