--- a/wiki/hello.wikitext
+++ b/wiki/hello.wikitext
@@ -51,6 +51,7 @@
 *[[Marshallese]]: yokwe<!-- not wikified due to incertainty of orthography -->
 *[[Nahuatl]]: [[niltze]]
 *Norwegian: [[hei]]
+*Persian: [[سلام]]
 *Polish: [[cześć]]
 *Portuguese: [[olá]], [[oi]] (1); [[alô]] (1,2)
 *Romanian: [[bună ziua]] (1), [[salut]] (1), [[alo]] (2) 
