/* Related Terms */ <amicus#46543>

--- a/wiki/amicus.wikitext
+++ b/wiki/amicus.wikitext
@@ -11,8 +11,9 @@ Feminine is ''[[amica]]''.
 Antonym: [[inimicus]].
 
 ===Related Terms===
-
+*[[ami]]
 *[[amicable]]
+*[[amico]]
 *[[amigo]]
 *[[amicus curiae]]
 *[[amiable]]
