--- a/wiki/%E8%B5%9E.wikitext
+++ b/wiki/%E8%B5%9E.wikitext
@@ -1,4 +1,4 @@
-* '''Alternate form''': [[贊]]
+* '''Alternate form''': [[贊]], [[讃]]
 
 * '''[[Wiktionary:Chinese radical index| Radical]] Number 154''': [[Wiktionary:Chinese radical index 贝|贝]]+12 strokes
 
@@ -16,7 +16,7 @@
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -30,6 +30,27 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[贊]]
+
+===Compounds===
+*[[赞比亚]]
+*[[赞不绝口]]
+*[[赞成]]
+*[[赞辞]], [[赞词]]
+*[[赞歌]]
+*[[赞美]]
+*[[赞美诗]]
+*[[赞佩]]
+*[[赞赏]]
+*[[赞颂]]
+*[[赞叹]]
+*[[赞同]]
+*[[赞羡]]
+*[[赞许]]
+*[[赞扬]]
+*[[赞语]]
+*[[赞誉]]
+*[[赞助]]
+*[[赞助商]]
 
 * '''Other info''': 
 
