--- a/wiki/%E8%B5%9E.wikitext
+++ b/wiki/%E8%B5%9E.wikitext
@@ -1,4 +1,4 @@
-* '''Alternate form''': [[贊]], [[讃]]
+* '''Alternate form''': [[贊]], [[讚]]
 
 * '''[[Wiktionary:Chinese radical index| Radical]] Number 154''': [[Wiktionary:Chinese radical index 贝|贝]]+12 strokes
 
@@ -29,7 +29,7 @@
 *** '''[[Yale]]''': jaan3
 
 * '''Style''': [[Simplified Chinese]] 
-** '''[[Traditional Chinese|Traditional]] equivalent''': [[贊]]
+** '''[[Traditional Chinese|Traditional]] equivalent''': [[贊]], [[讚]]
 
 ===Compounds===
 *[[赞比亚]]
