--- a/wiki/cogito.wikitext
+++ b/wiki/cogito.wikitext
@@ -235,3 +235,7 @@ First conjugation (1).
 |}
 <font color="red"> 1 </font> = c&#333;git&#257;tus / c&#333;git&#257;ta / c&#333;git&#257;tum <br>
 <font color="red"> 2 </font> = c&#333;git&#257;t&#299; / c&#333;git&#257;tae / c&#333;git&#257;ta <br>
+
+===Related terms===
+*[[cogitabondo]]
+*[[cogitativo]]
