--- a/wiki/hertz.wikitext
+++ b/wiki/hertz.wikitext
@@ -12,41 +12,45 @@
 :[[cycle per second]] (''old-fashioned'')
 
 ====Translations====
-
+*Chinese: [[赫]], [[赫兹]]
 *[[Finnish]]: [[hertsi]]
 *French: hertz ''m'' (''a preceding vowel is not elided''; ''pl'': hertz)
 *Italian: hertz ''m'' (''pl'': hertz)
+*Japanese: [[ヘルツ]]
 *Spanish: [[hercio]] ''m'', hertz ''m'' (''pl'': hertz)
 
 ====See also====
-:[[en:hertz|Wikipedia article '''hertz''']]
+:[[w:hertz|Wikipedia article '''hertz''']]
 
 ----
 
 ==French==
-'''hertz''' (''pl'': '''hertz''')
-
 ===Noun===
+'''hertz''' ''m'' (''plural'': '''hertz''')
 
-#(''m'') hertz
-#(''pl'') plural of '''hertz'''
+# hertz
+# plural of '''hertz'''
+
+===Related terms===
+*[[hertzien]]
 
 ----
 
 ==Italian==
-'''hertz''' (''pl'': '''hertz''')
-
 ===Noun===
+'''hertz''' ''m'' (''plural'': '''hertz''')
 
-#(''m'') hertz
-#(''pl'') plural of '''hertz'''
+# hertz
+# plural of '''hertz'''
+
+===Related terms===
+*[[hertziano]]
 
 ----
 
 ==Spanish==
-'''hertz''' (''pl'': '''hertz''')
-
 ===Noun===
+'''hertz''' ''m'' (''plural'': '''hertz''')
 
-#(''m'') hertz
-#(''pl'') plural of '''hertz'''
+# hertz
+# plural of '''hertz'''
