/* Translations */ de corrected <spy#57882>

--- a/wiki/spy.wikitext
+++ b/wiki/spy.wikitext
@@ -29,7 +29,7 @@
 *{{nl}}: [[spioneren]]
 *{{fi}}: [[vakoilla]]
 *{{fr}}: [[remarquer]]
-*{{de}}: [[auszuspionieren]]
+*{{de}}: [[ausspionieren]]
 *{{el}}: [[κατασκοπεύσει]]
 *{{it}}: [[spiare]]
 *{{pt}}: [[espiar]]
