--- a/wiki/%E9%80%80.wikitext
+++ b/wiki/%E9%80%80.wikitext
@@ -28,8 +28,54 @@
 
 ===Compounds===
 *[[退避]]
+*[[退避三舍]]
+*[[退兵]]
 *[[退步]]
+*[[退场]]
+*[[退潮]]
+*[[退出]]
+*[[退党]]
+*[[退佃]]
+*[[退股]]
+*[[退化]]
 *[[退还]]
+*[[退换]]
+*[[退回]]
+*[[退婚]]
+*[[退火]]
+*[[退伙]]
+*[[退货]]
+*[[退居]]
+*[[退款]]
+*[[退路]]
+*[[退落]]
+*[[退赔]]
+*[[退票]]
+*[[退瓶]]
+*[[退坡]]
+*[[退钱]]
+*[[退亲]]
+*[[退却]]
+*[[退让]]
+*[[退热]]
+*[[退色]]
+*[[退烧]]
+*[[退守]]
+*[[退缩]]
+*[[退庭]]
+*[[退团]]
+*[[退位]]
+*[[退伍]]
+*[[退席]]
+*[[退休]]
+*[[退学]]
+*[[退一步]]
+*[[退役]]
+*[[退隐]]
+*[[退赃]]
+*[[退职]]
+*[[退走]]
+*[[退租]]
 
 * '''Other info''': 
 
