--- a/wiki/%E5%A0%86.wikitext
+++ b/wiki/%E5%A0%86.wikitext
@@ -11,17 +11,17 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#heap, pile, crowd
-*# pile up
+*# [[heap]], [[pile]], [[crowd]]
+*# [[pile up]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': dūi (dui1)
+*** '''[[Pinyin]]''': duī (dui1)
 *** '''[[Wade-Giles]]''': tui<sup>1</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
@@ -29,15 +29,38 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': deui1
 
+===Compounds===
+*[[堆叠]]
+*[[堆垛]]
+*[[堆放]]
+*[[堆肥]]
+*[[堆焊]]
+*[[堆红]]
+*[[堆积]]
+*[[堆集]]
+*[[堆金积玉]]
+*[[堆绢]]
+*[[堆摞]]
+*[[堆码]]
+*[[堆砌]]
+*[[堆笑]]
+*[[堆绣]]
+*[[堆栈]]
+*[[堆子]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[たい]] (tai), [[つい]] (tsui)
 ** '''[[Kun]]''': [[うずたかい]] (uzutakai)
+
+===Compounds===
+*[[堆積]]
+*[[堆肥]]
 
 * '''Other info''':  
 
