--- a/wiki/%E7%A2%93.wikitext
+++ b/wiki/%E7%A2%93.wikitext
@@ -10,15 +10,15 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': pestle
+* '''Common Meaning''': [[pestle]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': dùi (dui4)
+*** '''[[Pinyin]]''': duì (dui4)
 *** '''[[Wade-Giles]]''': tui<sup>4</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
@@ -26,11 +26,14 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': deui3
 
+===Compounds===
+*[[碓房]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[たい]] (tai)
