fr: entry, with hom <mec#66306>

--- a/wiki/mec.wikitext
+++ b/wiki/mec.wikitext
@@ -7,4 +7,4 @@
 ===Noun===
 '''mec''' (''plural'' '''mecs''')
 
-#(''slang'') [[guy]], [[bloke]] (''British''), [[chap]] (''British'')
+#(''slang'') [[guy]], [[bloke]] (''UK''), [[chap]] (''UK'')
