+fi, sv, de <police#66220>

--- a/wiki/police.wikitext
+++ b/wiki/police.wikitext
@@ -7,9 +7,12 @@
 
 ====Translations====
 *Chinese: [[警察]] (jingcha)
+*Finnish: [[poliisi]]
 *French: police ''f''
+*German: [[Polizei]] ''f''
 *Italian: [[polizia]] ''f''
 *Japanese: [[警察]] (けいさつ)
+*Swedish: [[polis#Swedish|polis]] ''c''
 *Vietnamese: [[cảnh sát]]
 
 ===Verb===
