removed hom - this is "La Mecque" <mec#66306>

--- a/wiki/mec.wikitext
+++ b/wiki/mec.wikitext
@@ -1,10 +1,5 @@
 ==French==
-===Pronunciation===
-
-====Homophones====
-*[[Mecque]]
-
 ===Noun===
 '''mec''' (''plural'' '''mecs''')
 
-#(''slang'') [[guy]], [[bloke]] (''UK''), [[chap]] (''UK'')
+#(''slang'') [[guy]], [[bloke]] (''British''), [[chap]] (''British'')
