--- a/wiki/dopamine.wikitext
+++ b/wiki/dopamine.wikitext
@@ -1,5 +1,10 @@
+==English==
+
 ===Noun===
 
 '''Dopamine'''
 
 #a neurotransmitter associated with movement, attention and learning and the brain's pleasure and reward system.
+
+====Translations====
+*Finnish: [[dopamiini]]
