/* Noun */ perf. pass. participle = gerund? <datum#38438>

--- a/wiki/datum.wikitext
+++ b/wiki/datum.wikitext
@@ -12,4 +12,4 @@ Latin
 ==Latin==
 ===Noun===
 '''datum'''
-# ''"Having been given"'' : gerund of [[dare#Latin|dare]].
+# ''"Having been given"'' : perfect passive participle of [[dare#Latin|dare]].
