--- a/wiki/%E9%95%A6.wikitext
+++ b/wiki/%E9%95%A6.wikitext
@@ -13,17 +13,17 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#ferrule
-*# castrate
+*# [[ferrule]]
+*# [[castrate]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': dùi (dui4)
+*** '''[[Pinyin]]''': duì (dui4)
 *** '''[[Wade-Giles]]''': tui<sup>4</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
