/* Noun */ verbal noun in all genders <datum#38438>

--- a/wiki/datum.wikitext
+++ b/wiki/datum.wikitext
@@ -11,5 +11,5 @@ Latin
 
 ==Latin==
 ===Noun===
-'''datum'''
+('''datus''', '''data''', '''datum''')
 # ''"Having been given"'' : perfect passive participle of [[dare#Latin|dare]].
