+fi, dewikify <proscribe#36170>

--- a/wiki/proscribe.wikitext
+++ b/wiki/proscribe.wikitext
@@ -1,6 +1,11 @@
+==English==
+
 ===Transitive verb===
+'''proscribe'''
+
 #To [[forbid]].
 
 ====Translations====
-*[[German]]: [[verbieten]]
-*[[Norwegian]]: [[Å forby]]
+*Finnish: [[kieltää]]
+*German: [[verbieten]]
+*Norwegian: [[Å forby]]
