--- a/wiki/%E5%B4%94.wikitext
+++ b/wiki/%E5%B4%94.wikitext
@@ -11,17 +11,17 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#high, lofty, towering
+*# [[high]], [[lofty]], [[towering]]
 *# surname
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': cūi (cui1)
+*** '''[[Pinyin]]''': cuī (cui1)
 *** '''[[Wade-Giles]]''': ts'ui<sup>1</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
@@ -29,11 +29,14 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': cheui1
 
+===Compounds===
+*[[崔嵬]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[さい]] (sai), [[すい]] (sui), [[せ]] (se)
