--- a/wiki/%E6%91%A7.wikitext
+++ b/wiki/%E6%91%A7.wikitext
@@ -10,15 +10,15 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': destroy, break, injure
+* '''Common Meaning''': [[destroy]], [[break]], [[injure]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': cūi (cui1)
+*** '''[[Pinyin]]''': cuī (cui1)
 *** '''[[Wade-Giles]]''': ts'ui<sup>1</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
@@ -26,11 +26,16 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': cheui1
 
+===Compounds===
+*[[摧残]]
+*[[摧毁]]
+*[[摧枯拉朽]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[さい]] (sai), [[さ]] (sa), [[すい]] (sui)
