+fi, sv <murderer#51793>

--- a/wiki/murderer.wikitext
+++ b/wiki/murderer.wikitext
@@ -6,10 +6,12 @@
 
 ====Translations====
 *Czech: [[vrah]] ''m''
+*Finnish: [[murhaaja]]
 *French: [[meurtrier]] ''m''
 *Italian: [[assassino]] ''m''
 *Norwegian: [[morder]] ''m''
 *{{sk}}: [[vrah#Slovak|vrah]] ''m''
+*Swedish: [[mördare]] ''c''
 
 ===Related terms===
 *[[murder]]
