--- a/wiki/%E9%BE%9F.wikitext
+++ b/wiki/%E9%BE%9F.wikitext
@@ -13,26 +13,38 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#turtle or tortoise
+*# [[turtle]] or [[tortoise]]
 *# cuckold
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': gūi (gui1)
-*** '''[[Wade-Giles]]''': kuei<sup>1</sup>
+*** '''[[Pinyin]]''': guī (gui1), jūn (jun1), qiū (qiu1)
+*** '''[[Wade-Giles]]''': kuei<sup>1</sup>, chün<sup>1</sup>, ch'iu<sup>1</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
 *** '''[[Jyutping]]''':
 *** '''[[Penkyamp]]''': 
-*** '''[[Yale]]''': gau1, gwai1 gwan1
+*** '''[[Yale]]''': gau1, gwai1, gwan1
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[龜]]
+
+===Compounds===
+#guī
+#*[[龟趺]]
+#*[[龟鹤]]
+#*[[龟甲]]
+#*[[龟缩]]
+#*[[龟头]]
+#*[[龟足]]
+#*[[乌龟]]
+#jūn
+#*[[龟裂]]
 
 * '''Other info''': 
 
