--- a/wiki/femina.wikitext
+++ b/wiki/femina.wikitext
@@ -1,4 +1,4 @@
-==Latin==
+=='''Latin'''==
 ===Noun===
 '''femina, feminae''' ''f'',   ''[[Wiktionary Appendix:Latin second declension|2nd declension]]''
 
@@ -7,3 +7,5 @@
 ===Related English Words===
 
 *[[feminine]]
+=='''Synonym'''==
+[[mulier]]
