--- a/wiki/%E4%BA%8F.wikitext
+++ b/wiki/%E4%BA%8F.wikitext
@@ -12,15 +12,15 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': lose, fail; damage; deficient
+* '''Common Meaning''': [[lose]], [[fail]]; [[damage]]; [[deficient]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** [[Mandarin]]:
-*** '''[[Pinyin]]''': kūi (kui1), yú (yu2)
+*** '''[[Pinyin]]''': kuī (kui1), yú (yu2)
 *** '''[[Wade-Giles]]''': k'uei<sup>1</sup>, yü<sup>2</sup>
 *** '''[[Yale]]''': 
 **[[Cantonese]]
@@ -31,11 +31,29 @@
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[虧]]
 
+===Compounds===
+*[[亏本]]
+*[[亏产]]
+*[[亏秤]]
+*[[亏待]]
+*[[亏得]]
+*[[亏短]]
+*[[亏乏]]
+*[[亏负]]
+*[[亏耗]]
+*[[亏空]]
+*[[亏累]]
+*[[亏欠]]
+*[[亏折]]
+*[[亏蚀]]
+*[[亏损]]
+*[[亏心]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[う]] (u)
