--- a/wiki/%E7%AA%A5.wikitext
+++ b/wiki/%E7%AA%A5.wikitext
@@ -12,15 +12,15 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': peep, watch, spy on, pry
+* '''Common Meaning''': [[peep]], [[watch]], [[spy]] on, [[pry]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': kūi (kui1)
+*** '''[[Pinyin]]''': kuī (kui1)
 *** '''[[Wade-Giles]]''': k'uei<sup>1</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
@@ -30,6 +30,18 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[窺]]
+
+===Compounds===
+*[[窥豹一斑]]
+*[[窥测]]
+*[[窥察]]
+*[[窥见]]
+*[[窥视]]
+*[[窥视镜]]
+*[[窥伺]]
+*[[窥探]]
+*[[窥听]]
+*[[窥望]]
 
 * '''Other info''': 
 
