--- a/wiki/%E7%9B%94.wikitext
+++ b/wiki/%E7%9B%94.wikitext
@@ -11,18 +11,18 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#helmet
-*# bowl
-*# basin
+*# [[helmet]]
+*# [[bowl]]
+*# [[basin]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': kūi (kui1)
+*** '''[[Pinyin]]''': kuī (kui1)
 *** '''[[Wade-Giles]]''': k'uei<sup>1</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
@@ -30,11 +30,15 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': kwai1
 
+===Compounds===
+*[[盔甲]]
+*[[盔子]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[かい]] (kai)
