+Finnish slang noun <ege#66199>

--- a/wiki/ege.wikitext
+++ b/wiki/ege.wikitext
@@ -3,3 +3,14 @@
 ==Synonym==
 
 [[eage]].
+
+----
+
+==Finnish==
+
+===Noun===
+
+# (''slang'') [[euro]] (''currency'')
+
+====Synonyms====
+*(''currency'', ''colloquial or slang'') [[eero]], [[eke#Finnish|eke]], [[erkki]], [[uusi raha]]
