--- a/wiki/mulier.wikitext
+++ b/wiki/mulier.wikitext
@@ -1,7 +1,12 @@
-=='''Latin'''==
-=='''Common Noun'''==
-[[woman]]
-=='''Synonym'''==
-[[femina]]
-=='''Cognates'''==
-[[mujer]]<P>
+==Latin==
+===Common noun==
+'''mulier'''
+
+#[[woman]]
+
+===Synonym===
+*[[femina]]
+
+===Cognates===
+*[[moglie]]
+*[[mujer]]
