--- a/wiki/femina.wikitext
+++ b/wiki/femina.wikitext
@@ -1,11 +1,11 @@
-=='''Latin'''==
+==Latin==
 ===Noun===
-'''femina, feminae''' ''f'',   ''[[Wiktionary Appendix:Latin second declension|2nd declension]]''
+'''femina''', '''feminae''' ''f'',   ''[[Wiktionary Appendix:Latin second declension|2nd declension]]''
 
 #a [[woman]]
 
 ===Related English Words===
-
 *[[feminine]]
-=='''Synonym'''==
-[[mulier]]
+
+===Synonym===
+*[[mulier]]
