--- a/wiki/mujer.wikitext
+++ b/wiki/mujer.wikitext
@@ -1,5 +1,8 @@
-=='''Spanish'''==
-=='''Common noun'''==
-[[woman]]
-=='''Etymology'''==
-'''Latin''',[[mulier]]
+==Spanish==
+===Common noun===
+'''mujer'''
+
+#[[woman]]
+
+===Etymology===
+Latin, [[mulier]]
