--- a/wiki/Sverige.wikitext
+++ b/wiki/Sverige.wikitext
@@ -1,3 +1,9 @@
-=='''Swedish'''==
-=='''Proper noun'''==
-'''[[Sweden]]'''
+==Swedish==
+===Proper noun===
+'''Svarige'''
+
+#[[Sweden]]
+
+===Related terms===
+*[[svensk]]
+*[[svenska]]
