--- a/wiki/%E7%9C%AD.wikitext
+++ b/wiki/%E7%9C%AD.wikitext
@@ -14,11 +14,11 @@
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': sūi (sui1)
+*** '''[[Pinyin]]''': suī (sui1)
 *** '''[[Wade-Giles]]''': sui<sup>1</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
@@ -30,7 +30,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[き]] (ki), [[けい]] (kei), [[え]] (e), [[すい]] (sui)
