--- a/wiki/%E8%8D%BD.wikitext
+++ b/wiki/%E8%8D%BD.wikitext
@@ -12,15 +12,15 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': coriander
+* '''Common Meaning''': [[coriander]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': sūi (sui1), wēi (wei1), wěi (wei3)
+*** '''[[Pinyin]]''': suī (sui1), wēi (wei1), wěi (wei3)
 *** '''[[Wade-Giles]]''': sui<sup>1</sup>, wei<sup>1</sup>, wei<sup>3</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
@@ -32,7 +32,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[い]] (i), [[すい]] (sui), [[ずい]] (zui), [[に]] (ni)
