--- a/wiki/police.wikitext
+++ b/wiki/police.wikitext
@@ -10,6 +10,7 @@
 *Finnish: [[poliisi]]
 *French: police ''f''
 *German: [[Polizei]] ''f''
+*Hebrew: [[משטרה]] ''f''
 *Italian: [[polizia]] ''f''
 *Japanese: [[警察]] (けいさつ)
 *Swedish: [[polis#Swedish|polis]] ''c''
