/* Latin */ participle : adjective :: gerund : noun <datum#38438>

--- a/wiki/datum.wikitext
+++ b/wiki/datum.wikitext
@@ -10,6 +10,7 @@ Latin
 ----
 
 ==Latin==
-===Noun===
+===Noun & Adjective===
 ('''datus''', '''data''', '''datum''')
-# ''"Having been given"'' : perfect passive participle of [[dare#Latin|dare]].
+# (''adjective'') ''"Having been given"'' : perfect passive participle of [[dare#Latin|dare]].
+# (''noun'') ''"That which has been given"'' : gerund of [[dare#Latin|dare]].
