--- a/wiki/police.wikitext
+++ b/wiki/police.wikitext
@@ -7,6 +7,7 @@
 
 ====Translations====
 *Chinese: [[警察]] (jingcha)
+*Dutch: [[politie]] ''m''
 *Finnish: [[poliisi]]
 *French: police ''f''
 *German: [[Polizei]] ''f''
