/* Noun & Adjective */ change gerund definition to better reflect gender inflection <datum#38438>

--- a/wiki/datum.wikitext
+++ b/wiki/datum.wikitext
@@ -13,4 +13,4 @@ Latin
 ===Noun & Adjective===
 ('''datus''', '''data''', '''datum''')
 # (''adjective'') ''"Having been given"'' : perfect passive participle of [[dare#Latin|dare]].
-# (''noun'') ''"That which has been given"'' : gerund of [[dare#Latin|dare]].
+# (''noun'') ''"The given person", "the given thing"'' : gerund of [[dare#Latin|dare]].
