/* Noun & Adjective */ No italics for def. <datum#38438>

--- a/wiki/datum.wikitext
+++ b/wiki/datum.wikitext
@@ -12,5 +12,5 @@ Latin
 ==Latin==
 ===Noun & Adjective===
 ('''datus''', '''data''', '''datum''')
-# (''adjective'') ''"Having been given"'' : perfect passive participle of [[dare#Latin|dare]].
-# (''noun'') ''"The given person", "the given thing"''.
+# (''adjective'') "Having been given" : perfect passive participle of [[dare#Latin|dare]].
+# (''noun'') "The given person", "the given thing".
