See discussion <APT#66342>

--- a/wiki/apt.wikitext
+++ b/wiki/apt.wikitext
@@ -1,1 +1,11 @@
-#REDIRECT [[Apt]]
+==English==
+
+===Abbreviation===
+'''APT'''
+
+# [[Advanced Packaging Tool]]
+# [[Advanced Passenger Train]]
+# [[Alabama Public Television]]
+# [[American Public Television]]
+# [[apartment]]  The US Postal Service prefers ''APT'', but ''Apt.'' is also seen.
+# [[arbitrage pricing theory]]
