--- a/wiki/Chomskyan.wikitext
+++ b/wiki/Chomskyan.wikitext
@@ -3,7 +3,7 @@
 ===Adjective===
 '''Chomskyan'''
 
-# Relating to the linguist and activist [w:Noam Chomsky|Noam Chomsky].
+# Relating to the linguist and activist [[w:Noam Chomsky|Noam Chomsky]].
 # (''linguistics'') Following the theoretical approach introduced by Noam Chomsky, et. al.
 
 ===See Also===
