/* Noun */ Etymology <corpse#41371>

--- a/wiki/corpse.wikitext
+++ b/wiki/corpse.wikitext
@@ -1,5 +1,7 @@
 ===Noun===
-'''corpse'''
+#A dead body
+==Etymology==
+Latin [[corpus]]"body"
 
 ====Translations====
 *Lithuanian: [[lavonas]] ''m''
