--- a/wiki/corpse.wikitext
+++ b/wiki/corpse.wikitext
@@ -1,7 +1,7 @@
 ===Noun===
 #A dead body
-==Etymology==
-Latin [[corpus]]"body"
+=='''Etymology'''==
+'''Latin''' [[corpus]]"'''body'''"
 
 ====Translations====
 *Lithuanian: [[lavonas]] ''m''
