--- a/wiki/corpus.wikitext
+++ b/wiki/corpus.wikitext
@@ -1,6 +1,10 @@
 ===Noun===
 '''corpus''' (Plural: [[corpora]]/[[corpuses]])
 
+=='''Etymology'''==
+'''Latin''' "'''"body"'''"
+
+
 ====Related terms====
 *[[corpus linguistics]]
 *[[aligned parallel corpus]]
