--- a/wiki/cadaver.wikitext
+++ b/wiki/cadaver.wikitext
@@ -14,7 +14,7 @@ Latin [[cadaver|cadāver]], derived from [[cadere]] "to fall", used as a [[euphe
 ca-dav-er
 
 ===Noun===
-'''cadaver''' (''plural:'' [[cadavers]])
+'''cadaver''' (''plural:'' [[cadaver]]s)
 : a dead body; especially that of a human to be dissected.
 
 ====Synonyms====
