/* Translations */ +Latin <this#3974>

--- a/wiki/this.wikitext
+++ b/wiki/this.wikitext
@@ -29,6 +29,7 @@
 *Icelandic: [[þessi]]
 *Italian: [[questo]] ''m'', [[questa]] ''f''
 *Japanese: [[これ]] (koré)
+*Latin: [[hoc|hic]] ''m'', [[hoc|haec]] ''f'', [[hoc]], ''n''
 *[[Manchu]]: ([[ere]])
 *Norwegian: [[dette]]
 *[[Persian]]: [[اين]] (in)
