/* Demonstrative determiner */ link to This <hoc#66346>

--- a/wiki/hoc.wikitext
+++ b/wiki/hoc.wikitext
@@ -1,7 +1,7 @@
 ==Latin==
 ===Demonstrative determiner===
 ('''hic''', '''haec''', '''hoc''')
-# This: this person; this thing.
+# [[This]]: this person; this thing.
 
 ====Declension====
 First and second declensions.
