/* Translations */ no 3rd comma <this#3974>

--- a/wiki/this.wikitext
+++ b/wiki/this.wikitext
@@ -59,7 +59,7 @@
 *Hungarian: [[ez a]] ''sg'', [[ezek a]] ''pl''
 *Italian: [[questo]] ''m'', [[questa]] ''f''
 *Japanese: [[この]] (konó)
-*Latin: [[hoc|hic]] ''m'', [[hoc|haec]] ''f'', [[hoc]], ''n''
+*Latin: [[hoc|hic]] ''m'', [[hoc|haec]] ''f'', [[hoc]] ''n''
 *Polish: [[ten]] / [[ta]] / [[to]] ''m/f/n''
 *Portuguese: [[este]] ''m'', [[esta]] ''f'', [[estes]] ''pl'', [[estas]] ''f/pl''
 *Russian: [[этот]] / [[эта]] / [[это]] / [[эти]] (étot/éta/éto/éti) ''m/f/n/pl''
