--- a/wiki/diminish.wikitext
+++ b/wiki/diminish.wikitext
@@ -5,5 +5,6 @@
 # (''intransitive verb'') To become smaller.
 
 ====Translations====
-* Latin: [[minuere]]
-* Spanish: [[disminuir]]
+*Finnish: [[pienentää]] (1, ''transitive''), [[pienentyä]] (2, ''intransitive'')
+*Latin: [[minuere]]
+*Spanish: [[disminuir]]
