--- a/wiki/autodidact.wikitext
+++ b/wiki/autodidact.wikitext
@@ -12,6 +12,7 @@
 *[[self-taught]]
 
 ====Translations====
+*Finnish: [[itseoppinut]]
 *French: [[autodidacte]] ''m'',''f''
 *German: [[Autodidakt]] ''m''
 *Italian: [[autodidatto]] ''m'', [[autodidatta]] ''f''
