+fi,sv <vacuum cleaner#66245>

--- a/wiki/vacuum_cleaner.wikitext
+++ b/wiki/vacuum_cleaner.wikitext
@@ -8,5 +8,7 @@
 *[[hoover]], [[vacuum]]
 
 ====Translations====
+*Finnish: [[pölynimuri]] (1)
 *French: [[aspirateur]] ''m''
 *Italian: [[aspirapolvere]] ''m''
+*Swedish: [[dammsugare]] ''c'' (1)
