rus <vacuum cleaner#66245>

--- a/wiki/vacuum_cleaner.wikitext
+++ b/wiki/vacuum_cleaner.wikitext
@@ -11,4 +11,5 @@
 *Finnish: [[pölynimuri]] (1)
 *French: [[aspirateur]] ''m''
 *Italian: [[aspirapolvere]] ''m''
+*{{ru}}: [[пылесос]] ''m''
 *Swedish: [[dammsugare]] ''c'' (1)
