--- a/wiki/pr0n.wikitext
+++ b/wiki/pr0n.wikitext
@@ -3,4 +3,4 @@
 ===Noun===
 '''pr0n'''
 
-# (''internet, colloquial'') Variant spelling of [[porn]].
+# (''Internet, colloquial'') Variant spelling of [[porn]].
