+Swedish noun <spik#66256>

--- a/wiki/spik.wikitext
+++ b/wiki/spik.wikitext
@@ -5,3 +5,12 @@
 #The part of the interior of a [[hat]] that touches the top of the wearer's head.
 
 {{protologism}}
+
+----
+
+==Swedish==
+
+===Noun===
+'''spik''' ''c'' (''definite singular'' '''spiken''', ''indefinite plural'' '''spikar''', ''definite plural'' '''spikarna''')
+
+# [[nail]] (''not fingernail'')
