--- a/wiki/querer.wikitext
+++ b/wiki/querer.wikitext
@@ -1,6 +1,6 @@
-==Portuguese, Spanish==
+==Portuguese==
 ===Verb===
-# to like to have
+# to desire to have
 
 ====Translations====
 *Catalan: [[voler]]
@@ -14,3 +14,7 @@
 *Turkish: [[istemek]]
 
 [[Category:Portuguese irregular verbs]]
+
+==Spanish==
+#to desire to have
+#to love
