--- a/wiki/neuter.wikitext
+++ b/wiki/neuter.wikitext
@@ -11,8 +11,9 @@ Latin, from ''[[ne]]'' not + ''[[uter]]'' whether; akin to English [[whether]]. 
 #(''Biology''): Having no generative organs, or imperfectly developed ones; sexless
 
 ====Translations====
+*Finnish: [[neutri]]- (2, 4, ''in compounds''), [[intransitiivinen]] (3)
 *Greek: [[ουδέτερος]] [[:el:ουδέτερος|el]]
-*swedish: [[neutrum]] (2)
+*Swedish: [[neutrum]] (2)
 
 ===Noun===
 #A person who takes no part in a contest; one who is either indifferent to a cause or forbears to interfere; a neutral.
@@ -23,6 +24,7 @@ Latin, from ''[[ne]]'' not + ''[[uter]]'' whether; akin to English [[whether]]. 
 #(''Biology'') An organism, either vegetable or animal, which at its maturity has no [[generative]] [[organ]]s, or but imperfectly developed ones, as a plant without [[stamen]]s or [[pistil]]s, as the garden [[Hydrangea]]; especially, one of the imperfectly developed females of certain social insects, as of the ant and the common honeybee, which perform the labors of the community, and are called workers.
 
 ====Translations====
+*Finnish: [[neutraali]] (1), [[neutri]] (2, 4), [[puolueeton]] (1), [[intransitiiviverbi]] (3),
 *Japanese: [[中性]]
 *Swedish: [[neutrum]] (2)
 
@@ -36,6 +38,7 @@ Latin, from ''[[ne]]'' not + ''[[uter]]'' whether; akin to English [[whether]]. 
 
 ====Translations====
 *Dutch: [[onzijdig]]
+*Finnish: [[kuohita]] (1, ''of male animals''), [[kuohia]] (1, ''of male animals''), [[kastroida]] (1, ''of male animals''), [[leikata]] (1, ''of pets''), [[steriloida]] (1)
 *French: [[neutre]]
 *Greek: [[Ουδέτερος]]<!-- really capitalised? -->
 *German: [[neutrum]], [[sächlich]]
