/* Translations */*Czech <slave#35269>

--- a/wiki/slave.wikitext
+++ b/wiki/slave.wikitext
@@ -17,6 +17,7 @@
 *[[zombie]]
 
 ====Translations====
+*Czech [[robota]]
 *Dutch: [[slaaf]] ''m'', [[slavin]] ''f''
 *Finnish: [[orja]] (1), [[oheis-]] (2), [[sivu-]] (2)
 *French: [[esclave]]
