--- a/wiki/Earthling.wikitext
+++ b/wiki/Earthling.wikitext
@@ -4,6 +4,7 @@
 ===Synonyms===
 *[[earthman]]
 *[[tellurian]]
-*[[terrestrian]]
+*[[terrestrial]]
+
 ===Translations===
 *Russian: [[землянин]] ''m", ''[[житель]] [[Земля|Земли]]'' ''m''
