+fi <MP3 player#66271>

--- a/wiki/MP3_player.wikitext
+++ b/wiki/MP3_player.wikitext
@@ -4,5 +4,8 @@
 
 #An [[electronic]] device for playing digital audio files in the [[MP3]] format (and, in many cases, also files in some other formats).
 
+====Translations====
+*Finnish: [[MP3-soitin]]
+
 ===See also===
 *[[w:MP3 player|Wikipedia article on MP3 players]]
