synonyms base <terrestrial#66359>

--- a/wiki/terrestrial.wikitext
+++ b/wiki/terrestrial.wikitext
@@ -10,4 +10,9 @@
 #Of, relating to, or composed of land.
 #Living or growing on land; not aquatic
 #:a terrestrial plant
-#Concerned with the world or worldly matters; [[mundane]]
+#Concerned with the world or worldly matters
+====Synonyms====
+#[[planetary]]
+#[[tellurian]], [[telluric]], [[terrene]]
+#[[land]]
+#[[mundane]]
