--- a/wiki/Slavic.wikitext
+++ b/wiki/Slavic.wikitext
@@ -1,2 +1,4 @@
-=='''Adjective'''==
-#Of the [[Slav]]s,their culture or languages
+{{-en-}}
+===Adjective===
+'''Slavic'''
+#Of the [[Slav]]s, their culture or languages
