/* Proper Noun */ ok, not a proper noun <tellurian#66358>

--- a/wiki/tellurian.wikitext
+++ b/wiki/tellurian.wikitext
@@ -1,5 +1,5 @@
 ==English==
-===Proper Noun===
+===Noun===
 #An [[inhabitant]] of the [[Earth]]
 ====Synonyms====
 *[[earthling]]
@@ -7,6 +7,7 @@
 *[[terrestrian]]
 ====Translations====
 *Russian: [[землянин]] ''m", ''[[житель]] [[Земля|Земли]]'' ''m''
+
 ===Adjective===
 #Of or relating to, or inhabiting the Earth.
 ====Synonyms====
