--- a/wiki/cholo.wikitext
+++ b/wiki/cholo.wikitext
@@ -1,5 +1,5 @@
-=='''Spanish'''==
-=='''Noun'''==
-#a person of mixed Spanish and Indian ancestry
-=='''Synonym'''==
-[[mestizo]]
+==Spanish==
+===Noun===
+#A person of mixed Spanish and Indian ancestry.
+===Synonym===
+*[[mestizo]]
