--- a/wiki/mestizo.wikitext
+++ b/wiki/mestizo.wikitext
@@ -1,7 +1,7 @@
-=='''Spanish'''==
-=='''Adjective'''==
-#of mixed,Spanish and Indian heritage
-=='''Noun'''==
+{{-es-}}
+===Adjective===
+#Of mixed, Spanish and Indian heritage
+===Noun===
 #A person of mixed Spanish and Indian heritage
-=='''Synonym==
+===Synonym===
 *[[cholo]]
