Added Danish word 'neg' <neg#40514>

--- a/wiki/neg.wikitext
+++ b/wiki/neg.wikitext
@@ -1,3 +1,4 @@
+==English==
 ===Pronunciation===
 
 [[Neg]]
@@ -8,4 +9,9 @@ neg
 ===Etymology and Abbreviation===
 
 # [[negative]]
-====Translations====
+
+==Danish==
+===Noun===
+'''neg''' ''n''
+
+# [[sheaf]]
