--- a/wiki/-phobia.wikitext
+++ b/wiki/-phobia.wikitext
@@ -40,7 +40,7 @@ From Greek '''[[phobia]]''', from '''[[phobos]]''', ''fear''
 *[[gynophobia]]
 *[[heterophobia]]
 *[[homophobia]]
-*[[hydrophobia]] (which is not actually a phobia)
+*[[hydrophobia]] (also an acute viral disease of the nervous system)
 *[[ichthyophobia]]
 *[[Islamophobia]] <!--this word is capitalised-->
 *[[necrophobia]]
