--- a/wiki/ducere.wikitext
+++ b/wiki/ducere.wikitext
@@ -6,6 +6,44 @@
 ('''d&#363;c&#333;''', '''d&#363;cere''', '''d&#363;x&#299;''', '''ductum''')
 # To [[lead]].
 
+====Participles====
+{| cellpadding="5" border="1"
+!style="background:#F1BC4E;"| ''Tense \ Voice''
+!style="background:#D0D0B0;"| ''Active''
+!style="background:#D0D0B0;"| ''Passive''
+|-
+!style="background:#D0D0B0;"| ''Present''
+|style="background:#F7F7F5;" width=125px| <big> d&#363;c&#275;ns
+|style="background:#F7F7F5;" align="center" width=125px| &mdash;&mdash;
+|-
+!style="background:#D0D0B0;"| ''Perfect''
+|style="background:#F7F7F5;" align="center"| &mdash;&mdash;
+|style="background:#F7F7F5;"| <big> ductus
+|-
+!style="background:#D0D0B0;"| ''Future''
+|style="background:#F7F7F5;"| <big> duct&#363;rus
+|style="background:#F7F7F5;"| <big> d&#363;cendus
+|}
+
+====Infinitives====
+{| cellpadding="5" border="1"
+!style="background:#F1BC4E;"| ''Tense \ Voice''
+!style="background:#D0D0B0;"| ''Active''
+!style="background:#D0D0B0;"| ''Passive''
+|-
+!style="background:#D0D0B0;"| ''Present''
+|style="background:#F7F7F5;" width=125px| <big> d&#363;cere
+|style="background:#F7F7F5;" width=125px| <big> d&#363;c&#299;
+|-
+!style="background:#D0D0B0;"| ''Perfect''
+|style="background:#F7F7F5;"| <big> d&#363;xisse
+|style="background:#F7F7F5;"| <big> ductus esse
+|-
+!style="background:#D0D0B0;"| ''Future''
+|style="background:#F7F7F5;"| <big> duct&#363;rus esse
+|style="background:#F7F7F5;"| <big> ductum &#299;r&#299;
+|}
+
 ====Conjugation====
 Third conjugation (3).
 {| border="1" cellpadding="2"
