--- a/wiki/mince.wikitext
+++ b/wiki/mince.wikitext
@@ -2,7 +2,7 @@
 \Mince\
 == Verb==
 === Transitive ===
-*[[imp.]] & [[p. p.]]: {Minced}
+*[[imp.]] & [[p. p.]]: [[minced]]
 *[[p. pr.]] & [[vb. n.]]: Minging
 
 1. To cut into very small pieces; to chop fine; to hash; as, to mince meat. --[[w:Bacon]] (see [[w:meatball|meatball]].
