--- a/wiki/abdicated.wikitext
+++ b/wiki/abdicated.wikitext
@@ -4,8 +4,8 @@ American ([[SAMPA]]):\{"bd@keI't@d\
 
 == Entry ==
 
-'''Part of speech''': 
+'''Part of speech''': verb (simple past tense)
 
-'''Definition''':
+'''Definition''': see [[abdicate]]
 
 {{stub}}
