--- a/wiki/ferre.wikitext
+++ b/wiki/ferre.wikitext
@@ -2,12 +2,14 @@
 From Proto-Indo-European *bhar- (??, someone correct me on this if wrong)
 
 ==Latin==
-===Verb===
-'''[[ferro]]''', '''ferre''', '''[[tuli]]''', '''[[latus]]'''
+===Pronunciation===
+*AHD: <big>f&#277;&prime;r - r&#277; </big>
 
+===Verb===
+('''fer&#333;''', '''ferre''', '''tul&#299;''', '''[[latus|l&#257;tum]]''')
 # [[bear]], [[carry]]
 
-'''ferre''' is a very irregular verb whose principle parts come from several different words originally.
+'''ferre''' is a very irregular verb whose principal parts come from several different words originally.
 
 ===Related Terms===
 Many words with the roots ''[[-fer-]]'' and ''[[-lat-]]''.
