--- a/wiki/misunderestimate.wikitext
+++ b/wiki/misunderestimate.wikitext
@@ -8,4 +8,4 @@ Coined by the TV-show [[w:Saturday Night Live|Saturday Night Live]], parodying G
 # To underestimate by failing to understand.
 #:'''Quotations'''
 #:*'''2003''' ''Hence, while anticipating incoming fire, here are several factors for why even the most liberal of Democrats should not "misunderestimate" -- my favorite Bushism -- our prez:'' Joel Connelly, ''Seattle Post-Intelligencer'' Wednesday, April 30, 2003
-#:*'''2004''' ''I think that anybody who misunderestimates this president is going to have egg on their face in a few years," Rice told me.'' Bill Sammon, ''Misunderestimated: The President Battles Terrorism, John Kerry, and the Bush Haters.'' (ISBN 0060723831), page 347
+#:*'''2004''' ''"I think that anybody who misunderestimates this president is going to have egg on their face in a few years," Rice told me.'' Bill Sammon, ''Misunderestimated: The President Battles Terrorism, John Kerry, and the Bush Haters.'' (ISBN 0060723831), page 347
