--- a/wiki/Khmer.wikitext
+++ b/wiki/Khmer.wikitext
@@ -11,6 +11,9 @@
 *[[Khmer Rouge]]
 
 ====Translations====
+
+*{{fr}}: [[khmer]] ''m''
+*{{hi}}: [[ख्मेर]]
 *Khmer: [[ែខ្មរ]]
 *Polsih: [[khmerski]]
 *Thai: [[ภาษาเขมร]]
