--- a/wiki/toledo.wikitext
+++ b/wiki/toledo.wikitext
@@ -5,4 +5,4 @@
 #:'''Quotations'''
 #:*'''1786''': A [[long]] [[toledo]], with a [[hilt]] of [[filigrain]]ed [[steel]], length of the blade three [[feet]] nine [[inch]]es, [[finely]] [[taper]]ing to a [[point]]. &mdash; Francis Grose, ''A Treatise on Ancient Armour and Weapons'', page xv.
 ===See Also===
-*[[w:Toledo|Wikipedia article on Toledo]], the Spanish city
+[[w:Toledo|Wikipedia article on Toledo, the Spanish city]]
