--- a/wiki/Jesus.wikitext
+++ b/wiki/Jesus.wikitext
@@ -1,3 +1,4 @@
+{{-en-}}
 ===Pronunciation===
 *[[w:AHD|AHD]]: jē'zəz
 *[[w:IPA|IPA]]: /ˈdʒiːzəs/
@@ -5,10 +6,7 @@
 
 ===Proper noun===
 '''Jesus'''
-
-====Related terms====
-*[[Jesus Christ]]
-
+#[[Jesus Christ]]
 ====Translations====
 {| border=0 width=100%
 |-
