/* Noun */ <father-in-law#4502>

--- a/wiki/father-in-law.wikitext
+++ b/wiki/father-in-law.wikitext
@@ -2,8 +2,7 @@
 ===Noun===
 '''[[father]]-[[in-law]]'''
 
-#the father of someone's [[husband]] 
-#the father of someone's [[wife]] (uxorial father-in-law)
+# A person's [[father-in-law]] is his or her [[spouse]]'s [[father]].
 
 ====Translations====
 *Czech: tchán  ''m''
