--- a/wiki/spouse.wikitext
+++ b/wiki/spouse.wikitext
@@ -7,6 +7,7 @@
 '''spouse''' (''plural'' '''[[spouses]]''')
 
 #A [[husband]] or [[wife]] ([[irrespective]] of [[sex]]).
+#A [[wife]]'s [[husband]] is her [[spouse]]; a [[husband]]'s [[wife]] is his [[spouse]].
 
 ====Translations====
 {| border=0  width=100%
