--- a/wiki/stupid.wikitext
+++ b/wiki/stupid.wikitext
@@ -9,6 +9,8 @@
 #: ''Wiktionary vandalism bores me stupid.''
 # (''slang, dated'') Extremely.
 #: ''My gear is stupid fly.''
+# (''slang'') Amazing.
+# ''That [[dunk]] was stupid!  His head was above the rim!''
 
 ====Derived terms====
 *[[stupid-ass]]
