/* Adjective */ oops <stupid#54273>

--- a/wiki/stupid.wikitext
+++ b/wiki/stupid.wikitext
@@ -10,7 +10,7 @@
 # (''slang, dated'') Extremely.
 #: ''My gear is stupid fly.''
 # (''slang'') Amazing.
-# ''That [[dunk]] was stupid!  His head was above the rim!''
+#: ''That [[dunk]] was stupid!  His head was above the rim!''
 
 ====Derived terms====
 *[[stupid-ass]]
